grammar.js
    source_file: ($) =>
      seq(
        optional($.features_directive),
        optional(choice($.package_declaration, $.macro_package_declaration)),
        repeat($.import_list),
        repeat(
          seq(
            optional(token(';')),
            choice(
              choice(
                $.variable_declaration,
                $.function_definition,
                $.operator_function_definition,
                $.class_definition,
                $.interface_definition,
                $.struct_definition,
                $.enum_definition,
                $.type_alias,
                $.extend_definition,
                $.foreign_declaration,
                $.macro_definition,
                $.decorated_declaration,
                $.macro_expression,
              ),
              $.main_definition,
            ),
          ),
        ),
        optional(token(';')),
      ),

    package_declaration: ($) =>
      seq(optional($.modifiers), TOKENS.PACKAGE, field('package_name', $._name), terminator($)),
    _import_packages: ($) =>
      choice(
        prec.right(-3, field('package_name', $._name)),
        prec.right(-2, $.package_full),
        prec.right(-1, $.package_alias),
      ),
    import_list: ($) =>
      seq(
        optional(repeat1($.macro_call)),
        optional($.modifiers),
        TOKENS.IMPORT,
        choice($._import_packages, $.package_group, $.sub_group_of_package),
        terminator($),
      ),
    package_alias: ($) => seq(field('package_name', $._name), TOKENS.AS, field('alias', reserved('id', $.identifier))),
    package_full: ($) => seq(field('package_name', $._name), '.', token('*')),
    package_group: ($) => seq('{', seq($._import_packages, repeat(seq(',', $._import_packages))), optional(','), '}'),
    sub_group_of_package: ($) => seq(field('package_name', $._name), '.', $.package_group),

    main_definition: ($) => seq(TOKENS.MAIN, $.parameter_list, optional($.return_type), $.block),

    // ===== declarations =====
    modifiers: ($) =>
      prec.left(
        repeat1(
          choice(
            ...MODIFIER_TOKENS.map((t) => reserved('modifier', t)),
            TOKENS.STATIC,
            TOKENS.CONST,
            TOKENS.MUT,
            TOKENS.UNSAFE,
          ),
        ),
      ),
    _modifiers_var: ($) =>
      alias(
        prec.left(
          repeat1(
            choice(...MODIFIER_TOKENS.map((t) => reserved('modifier', t)), TOKENS.STATIC, TOKENS.MUT, TOKENS.UNSAFE),
          ),
        ),
        $.modifiers,
      ),
    decorated_declaration: ($) =>
      prec.dynamic(
        1,
        prec.right(
          seq(
            repeat1($.macro_call),
            choice(
              $.class_definition,
              $.function_definition,
              $.struct_definition,
              $.interface_definition,
              $.enum_definition,
              $.type_alias,
              $.extend_definition,
              $.foreign_declaration,
              $.variable_declaration,
              $.operator_function_definition,
              $.property_definition,
              $.init,
              $.static_init,
              $.finalizer,
              $.primary_init,
            ),
          ),
        ),
      ),

    macro_definition: ($) =>
      seq(
        optional($.modifiers),
        TOKENS.MACRO,
        field('name', $._macro_name),
        field('parameters', seq('(', optional(commaSep1Trailing($.macro_parameter)), ')')),
        optional(field('return_type', $.return_type)),
        choice(seq('=', field('body', $._expression)), field('body', $.block)),
      ),

    macro_parameter: ($) =>
      seq(
        field('name', reserved('id', $.identifier)),
        optional('!'),
        ':',
        field('type', $._type),
        optional(seq('=', field('default_value', $._expression))),
      ),
    _macro_name: ($) =>
      alias(
        prec.right(seq(repeat(seq(reserved('id', $.identifier), '.')), reserved('id', $.identifier))),
        $.macro_name,
      ),

    class_definition: ($) => seq(typeHeader($, TOKENS.CLASS, $._class_name), field('body', $.declaration_body)),
    struct_definition: ($) =>
      seq(
        typeHeader($, TOKENS.STRUCT, alias(reserved('id', $.identifier), $.struct_name)),
        field('body', $.declaration_body),
      ),

    enum_definition: ($) =>
      seq(typeHeader($, TOKENS.ENUM, alias(reserved('id', $.identifier), $.enum_name)), field('body', $.enum_body)),
    enum_body: ($) =>
      seq(
        '{',
        optional('|'),
        sep1(
          field(
            'enum_constant',
            choice(
              seq(
                optional(repeat1($.macro_call)),
                reserved('id', $.identifier),
                optional(seq('(', commaSep1Trailing($._type), ')')),
              ),
              token('...'),
            ),
          ),
          '|',
        ),
        optional($._declaration_list),
        '}',
      ),

    type_alias: ($) =>
      seq(
        optional($.modifiers),
        TOKENS.TYPE,
        field('name', alias(reserved('id', $.identifier), $.type_alias_name)),
        optional($.type_parameters),
        '=',
        field('type', $._type),
      ),

    foreign_declaration: ($) =>
      seq(
        TOKENS.FOREIGN,
        choice(
          field('body', $.declaration_body),
          choice($.class_definition, $.interface_definition, $.function_definition, $.variable_declaration),
        ),
      ),

    _declaration_list: ($) =>
      repeat1(
        seq(
          optional(repeat1(token(';'))),
          choice(
            $.variable_declaration,
            $.function_definition,
            $.operator_function_definition,
            $.property_definition,
            $.init,
            $.static_init,
            $.primary_init,
            $.finalizer,
            $.decorated_declaration,
            $.macro_expression,
          ),
        ),
      ),

    declaration_body: ($) => seq('{', optional($._declaration_list), '}'),
    _class_name: ($) => alias(reserved('id', $.identifier), $.class_name),
    generic_constraints: ($) =>
      prec.right(
        seq(
          TOKENS.WHERE,
          $.generic_constraint,
          repeat(seq(',', optional(repeat1(terminator($))), $.generic_constraint)),
          optional(','),
        ),
      ),
    generic_constraint: ($) =>
      seq(choice($.identifier, alias(TOKENS.THISTYPE, $.Thistype)), token('<:'), sep1($._type, '&')),

    // ===== members & functions =====
    function_definition: ($) =>
      prec.right(seq(optional($.modifiers), $._function_tail)),
    // Block-scope functions carry no modifiers (cjc: "unexpected modifier
    // 'private' on function declaration in main function body") — keeping
    // them out of the local rule also removes the modifier tokens from
    // statement-start states, so soft words like `open` lex as identifiers
    // in call position (`unsafe { open(p, oflag) }`).
    _function_tail: ($) =>
      prec.right(
        seq(
          TOKENS.FUNC,
          field('name', alias(reserved('id', $.identifier), $.func_name)),
          optional($.type_parameters),
          field('parameters', $.parameter_list),
          optional(field('return_type', $.return_type)),
          optional($.generic_constraints),
          optional(field('body', $.block)),
        ),
      ),
    operator_function_definition: ($) =>
      seq(
        optional($.modifiers),
        TOKENS.OPERATOR,
        optional(TOKENS.CONST),
        TOKENS.FUNC,
        field(
          'name',
          alias(
            choice(
              token(seq('[', ']')),
              token(seq('(', ')')),
              token('!'),
              token('+'),
              token('-'),
              token('**'),
              token('*'),
              token('/'),
              token('%'),
              token('<<'),
              token('>>'),
              token('<'),
              token('>'),
              token('<='),
              token('>='),
              token('=='),
              token('!='),
              token('&'),
              token('^'),
              token('|'),
            ),
            $.operator,
          ),
        ),
        optional($.type_parameters),
        field('parameters', $.parameter_list),
        optional(field('return_type', $.return_type)),
        optional($.generic_constraints),
        optional(field('body', $.block)),
      ),

    property_definition: ($) =>
      seq(
        optional($.modifiers),
        TOKENS.PROP,
        field('name', alias(reserved('id', $.identifier), $.property_name)),
        ':',
        field('type', $._type),
        optional(
          seq(
            '{',
            optional(field('getter', seq(alias(reserved('none', $.identifier), $.getter_keyword), '(', ')', $.block))),
            optional(
              field(
                'setter',
                seq(
                  alias(reserved('none', $.identifier), $.setter_keyword),
                  '(',
                  reserved('none', $.identifier),
                  ')',
                  $.block,
                ),
              ),
            ),
            '}',
          ),
        ),
      ),

    init: ($) =>
      prec(
        PREC.INIT,
        seq(
          optional($.modifiers),
          TOKENS.INIT,
          field('parameters', $.parameter_list),
          optional(field('body', $.block)),
        ),
      ),
    primary_init: ($) =>
      seq(
        optional($.modifiers),
        $._class_name,
        $.primary_init_param_list,
        '{',
        optional(
          repeat(seq(choice($._expression, $.variable_declaration, $.function_definition), optional(terminator($)))),
        ),
        '}',
      ),
    primary_init_param_list: ($) =>
      seq(
        '(',
        optional(
          commaSep1Trailing(choice($.parameter, $.named_parameter, $.unnamed_member_param, $.named_member_param)),
        ),
        ')',
      ),
    // A member parameter may carry annotations before its modifiers
    // (`@M[x] public let a!: T`), as a plain parameter does.
    return_type: ($) => seq(':', field('type', $._type)),

    block: ($) => seq('{', optional($._expression_or_declarations), '}'),
    _expression_or_declarations: ($) =>
      repeat1(
        seq(
          choice(
            alias($._local_variable_declaration, $.variable_declaration),
            alias($._local_function_definition, $.function_definition),
            $._expression,
          ),
          repeat(terminator($)),
        ),
      ),

    _var_decl_tail: ($) =>
      seq(
        choice(TOKENS.LET, TOKENS.VAR, TOKENS.CONST),
        field('name', alias($._pattern_irrefutable, $.variable_name)),
        choice(
          seq(':', field('type', $._type), optional(seq('=', field('initializer', $._expression)))),
          seq('=', field('initializer', $._expression)),
        ),
      ),
    variable_declaration: ($) => seq(optional($._modifiers_var), $._var_decl_tail),
    // ===== parameters & calls =====
    parameter_list: ($) =>
      seq(
        '(',
        optional(
          choice(
            seq(sep1($.parameter, ','), optional(seq(',', sep1($.named_parameter, ',')))),
            sep1($.named_parameter, ','),
          ),
        ),
        optional($.ellipsis_parameter),
        optional(','),
        ')',
      ),

    parameter: ($) =>
      seq(
        optional(repeat1($.macro_call)),
        choice(
          seq(
            field(
              'para_name',
              choice(alias(reserved('id', $.identifier), $.identifier), '_'),
            ),
            ':',
            field('type', $._type),
          ),
          seq('(', $.parameter, ')'),
          seq('(', $.named_parameter, ')'),
        ),
      ),
    unnamed_member_param: ($) =>
      seq(
        optional(repeat1($.macro_call)),
        optional($.modifiers),
        choice(TOKENS.LET, TOKENS.VAR),
        field('para_name', choice(reserved('id', $.identifier), '_')),
        ':',
        field('type', $._type),
        optional(seq('=', field('default_value', $._expression))),
      ),

    call_suffix: ($) =>
      seq(
        '(',
        optional(
          commaSep1Trailing(
            choice(
              seq(alias(reserved('id', $.identifier), $.identifier), ':', $._expression),
              $._expression,
              seq(TOKENS.INOUT, optional(seq($._expression, '.')), reserved('id', $.identifier)),
            ),
          ),
        ),
        $._call_tail,
      ),
    // The "whose lambda?" fork, isolated so the conflict is named after it.
    _call_tail: ($) => seq(')', optional($.lambda_expression)),
    // ===== statements & expressions =====
    _primary_expression: ($) =>
      choice(
        $._literal,
        $.array_literal,
        alias(reserved('id', $.identifier), $.identifier),
        $.type_conv_expr,
        $._type_name_expr,
        $.parenthesized_expression,
        $.tuple_expression,
        $.range_expression,
        $.lambda_expression,
        $.jump_expression,
        $.synchronized_expression,
        $.spawn_expression,
        $.perform_expression,
        $.resume_expression,
        $.unsafe_expression,
        $.this_super_expression,
        $.if_expression,
        $.match_expression,
        choice($.for_in_expression, $.while_expression, $.do_while_expression),
        $.try_expression,
        $.quote_expression,
        $.macro_expression,
        $._dollar_identifier,
        seq(token('$('), $._expression, ')'),
      ),

    _expression: ($) =>
      choice(
        $.postfix_expression,
        $.unary_expression,
        $.binary_expression,
        $.is_expression,
        $.as_expression,
        $.assignment_expression,
      ),

    _cond_tail: ($) => seq($.let_pattern_destructor, repeat(seq(choice('&&', '||'), $._logical_operand_right))),

    jump_expression: ($) =>
      choice(
        prec.right(seq(TOKENS.THROW, $._expression)),
        prec.right(seq(TOKENS.RETURN, optional($._expression))),
        TOKENS.CONTINUE,
        TOKENS.BREAK,
      ),

    if_expression: ($) =>
      prec.left(
        seq(
          TOKENS.IF,
          field('condition', seq('(', choice($._expression, $._cond_tail), ')')),
          field('consequence', $.block),
          optional(field('alternative', seq(TOKENS.ELSE, choice($.if_expression, $.block)))),
        ),
      ),

    let_pattern_destructor: ($) => prec(PREC.LET_COND, seq(TOKENS.LET, $._pattern, token('<-'), $._expression)),

    line_comment: (_) => token(prec(PREC.COMMENT, seq('//', /[^\r\n\u2028\u2029]*/))),

    // Two tiers: REFUTABLE (enum/const/typed/or) for match + `let p <- e`;
    // IRREFUTABLE (wildcard/binding/tuples of the same) for plain let and
    // foreach — tuples recurse with their tier. catch_pattern is outside.
    _pattern: ($) => choice($.or_pattern, $._pattern_single),

    _var_binding_pattern: ($) => alias(reserved('id', $.identifier), $.var_binding_pattern),
    type_pattern: ($) => seq(choice($.wildcard_pattern, $._var_binding_pattern), ':', $._type),

    user_type: ($) => prec.right(seq($._name, optional($.type_arguments))),

    arrow_type: ($) => seq('(', optional($._named_or_type_list), ')', token('->'), field('type', $._type)),

    type_arguments: ($) => seq('<', $._type_list, '>'),
    // Expression world: _generic_lt is a ZERO-WIDTH decision token (Swift
    // follow-set rule, scanner.c); hidden + aliased so both worlds surface
    // ONE node type: type_arguments.
    _generic_arguments: ($) => seq($._generic_lt, '<', $._type_list, '>'),

    _type_list: ($) => commaSep1Trailing($._type),

    _named_or_type_list: ($) => commaSep1Trailing(choice(seq(reserved('id', $.identifier), ':', $._type), $._type)),

    type_parameters: ($) => seq('<', commaSep1Trailing($.type_parameter), '>'),

    type_parameter: ($) => seq(field('name', reserved('id', $.identifier))),

    // ===== names & suffixes =====
